[package]
name = "verit-proof-checker"
version = "0.1.0"
authors = ["Bruno Andreotti <bandreotti@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
clap = "2.33.3"
num-bigint = "0.4.0"
num-rational = "0.4.0"
num-traits = "0.2.14"

[profile.release]
debug = true

[features]
large-test-set = []
