[package]
name = "alethe-proof-checker"
version = "0.1.0"
authors = ["Bruno Andreotti <bandreotti@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
log = "0.4.14"
num-bigint = "0.4.0"
num-integer = "0.1.44"
num-rational = "0.4.0"
num-traits = "0.2.14"
thiserror = "1.0.30"

[features]
large-test-set = []

[dev-dependencies]
rand = "0.8.4"
