[package]
name = "alethe-proof-checker"
version = "0.1.0"
authors = ["Bruno Andreotti <bandreotti@protonmail.com>"]
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
log = "0.4.14"
rug = { version = "1.16.0", features = ["integer", "rational"] }
thiserror = "1.0.30"

[features]
large-test-set = []

[dev-dependencies]
rand = "0.8.4"
