[package]
name = "carcara"
version = "1.1.0"
authors = [
    "Bruno Andreotti <bandreotti@proton.me>",
    "Vinícius Braga Freire <vinicius.braga.freire@gmail.com>",
    "Bernardo Borges <bernborgess@outlook.com>",
]
edition = "2021"
rust-version = "1.72"
license = "Apache-2.0"

[dependencies]
indexmap = "2.0.0"
log = "0.4.20"
rug = { version = "1.21.0", default-features = false, features = [
    "integer",
    "rational",
] }
thiserror = "1.0.47"

[dev-dependencies]
test-generator = { path = "../test-generator" }
rand = "0.8.5"
colored = "2.1.0"
