[package]
name = "carcara-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
license = "Apache-2.0"

[[bin]]
name = "carcara"
path = "src/main.rs"

[dependencies]
carcara = { path = "../carcara" }
ahash = "0.7.4"
clap = { version = "3.1.6", features = ["derive"] }
const_format = "0.2.22"
crossbeam = "0.8"
log = { version = "0.4.14", features = ["std"] }
ansi_term = "0.11"
git-version = "0.3.5"
atty = "0.2.14"
num_cpus = "1.0"
