[package]
name = "carcara-cli"
version = "1.0.0"
edition = "2021"
rust-version = "1.72"
license = "Apache-2.0"

[[bin]]
name = "carcara"
path = "src/main.rs"

[dependencies]
carcara = { path = "../carcara" }
clap = { version = "3.2.25", features = ["derive"] }
const_format = "0.2.31"
crossbeam-queue = "0.3.8"
log = { version = "0.4.20", features = ["std"] }
ansi_term = "0.12"
git-version = "0.3.5"
